@@ -522,7 +522,7 @@ CONFIG_FB_HWCURSORIMAGE=n
 #
 CONFIG_FS_FAT=y
 CONFIG_FAT_LCNAMES=y
-CONFIG_FAT_LFN=n
+CONFIG_FAT_LFN=y
 CONFIG_FAT_MAXFNAME=32
 CONFIG_FS_NXFFS=n
 CONFIG_FS_ROMFS=n
